--- a/MongoDB.Entities/MongoDB.Entities.csproj
+++ b/MongoDB.Entities/MongoDB.Entities.csproj
@@ -8,10 +8,7 @@
     <Description>A data access library for MongoDB with an elegant api, LINQ support and built-in entity relationship management.</Description>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/dj-nitehawk/MongoDB.Entities</PackageProjectUrl>
-    <Version>20.0.0</Version>    
-    <AssemblyVersion>20.0.0</AssemblyVersion>
-    <FileVersion>20.0.0</FileVersion>
-    <PackageVersion>20.0.0-beta</PackageVersion>
+    <Version>20.0.0-beta</Version>
     <Copyright>Đĵ ΝιΓΞΗΛψΚ</Copyright>
     <PackageReleaseNotes>- removed support for DB instances
 - removed all sync methods
