--- a/MongoDB.Entities/MongoDB.Entities.csproj
+++ b/MongoDB.Entities/MongoDB.Entities.csproj
@@ -8,14 +8,19 @@
     <Description>A data access library for MongoDB with an elegant api, LINQ support and built-in entity relationship management.</Description>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/dj-nitehawk/MongoDB.Entities</PackageProjectUrl>
-    <Version>20.0.1-beta</Version>
+    <Version>20.0.2-beta</Version>
     <Copyright>Đĵ ΝιΓΞΗΛψΚ</Copyright>
-    <PackageReleaseNotes>- removed support for DB instances
-- removed all sync methods
+    <PackageReleaseNotes>- removed all sync methods making the library async-only
+- removed support for DB instances
 - removed .net ioc container registration shortcuts
 - renamed DB.GetDatabase() to DB.Database() to be consistent with collection methods
-- add Find&lt;T&gt;.ExecuteSingleAsync() method
-- add Find&lt;T&gt;.ExecuteFirstAsync() method</PackageReleaseNotes>
+- renamed DB.Aggregate() to DB.ExecutePipelineAsync()
+- added DB.PipelineCursorAsync() method
+- added DB.PipelineSingleAsync() method
+- added DB.PipelineFirstAsync() method
+- adedd transaction support for the new PipeLine* methods
+- added Find&lt;T&gt;().ExecuteSingleAsync() method
+- added Find&lt;T&gt;().ExecuteFirstAsync() method</PackageReleaseNotes>
     <PackageId>MongoDB.Entities</PackageId>
     <Product>MongoDB.Entities</Product>
     <RepositoryUrl></RepositoryUrl>
