shortcut for generating new objectids

--- a/MongoDB.Entities/MongoDB.Entities.csproj
+++ b/MongoDB.Entities/MongoDB.Entities.csproj
@@ -24,6 +24,7 @@
 - added Template().Paths() method
 - added Prop.Collection() method
 - added Prop.Property() method
+- added DB.NewID() method
 - added new tests
 - upgraded driver to latest</PackageReleaseNotes>
     <PackageId>MongoDB.Entities</PackageId>
